v? - ?
  - * RectMapCollider.collide_map and .do_collision now take dx, dy instead of dy, dx
  - fixed RectMapCollider stuck sometimes, #238
  - * Rect.intersects behavior change: now points on border do not count, only interior ones
  - support the variants 'csv', 'xml', 'base64(uncompressed)' for .tmx tiles layer data, #243
  - fix position for TmxObject when type is 'tile', #245, thanks ottopotto for bug report
  - fix JumpTiles3D, typo introduced in pep8 refactor bf6dce6d, thanks dossjh
  - fix tmx tileset num rows - columns with nonzero separation, ( adc7054c7 )

v0.6.3 - April 26, 2015

  - support for 'spacing' in .tmx's tilesets
  - support to load (some) .tmx maps with hexagonal tiles
  - support collisions between CircleShape and AARectShape in collision_model, 
    #220, thanks Daniel Gillet
  - support to read .tmx (Tiled Editor) object layers and objects, #215
  - deprecated do_not_scale and do_not_scale_window, use autoscale, #214

  - fixed debug view of tmx object layers
  - fixed access cell properties for HexMap, #237, thanks Ezequiel Pozzo
  - workaround to some cases of 'unable to share contexts' on Intel gpu, #235
  - fixed tmx color problem in py2, thanks Daniel Gillet
  - fixed InterpreterLayer crash in py3, thanks Gereon Kaiping 
  - PEP8 over the library, thanks Humberto Rocha
  - PEP8 on some support files, thanks Igor Hatarist
  - fixed z-order in BatchNode, #213, thanks Nitneroc and MCopperhead
  - fixed passing a matrix in a uniform to shaders ( 4a7bfb5ca8 )
  - fixed Rect.clippedBy ( 0ffd5a37 ) 
  - fixed RandomDelay * n ( 56a5229 )
  - fixed <instant action> * n ( 9b1d950 )

v0.6.0 - March 24, 2014
  - removed tiles.ScrollingManager / tiles.ScrollableLayer, they were deprecated
    compatibility shims of same classes in cocos.layer
  - added support for gzip compression in .tmx maps, thanks fred@reichbier.de
    for initial patch, #185
  - fix Sprite.get_rect() forgetting about .scale_x and .scale_y 